--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.menubar {
+  padding-top: 10px;
+}
+
+.overflowing-menu {
+  overflow-x: scroll;
+}
