feat: base functionalities working 1.0 release

--- a/src/routes/CocoApp.css
+++ b/src/routes/CocoApp.css
@@ -1,19 +1,19 @@
-.App {
+.CocoApp {
   text-align: center;
 }
 
-.App-logo {
+.CocoApp-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .CocoApp-logo {
+    animation: CocoApp-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.CocoApp-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,11 +24,11 @@
   color: white;
 }
 
-.App-link {
+.CocoApp-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes CocoApp-logo-spin {
   from {
     transform: rotate(0deg);
   }
